Various Enhancements, updated to Angular v20

--- a/OoTTracker/ClientApp/src/app/checklist/checklist-filter/checklist-filter.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/checklist-filter/checklist-filter.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  <div class="filter-block filter-available" hidden>
+  <div class="filter-block filter-available">
     <h2>Available Checks</h2>
     <div class="filter-option">
       <input type="checkbox" id="items-obtainable" name="available-checks" (click)="toggleFilter('available')">
