--- a/OoTTracker/ClientApp/src/app/checklist/desert-checklist/desert-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/desert-checklist/desert-checklist.component.html
@@ -5,11 +5,11 @@
 
   <app-list [name]="'Gerudo Fortress'" [list]="fortressChecks" [color]="'orange'" [era]="adult"></app-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Gerudo Training Grounds'" [dungeonChecks]="13" [keyChecks]="9" [color]="'orange'" [era]="adult"></app-dungeon-list>
+  <app-dungeon-list [name]="dungeonSource + 'Gerudo Training Grounds'" [itemChecks]="13" [keyChecks]="9" [bossKey]="false" [color]="'orange'" [era]="adult"></app-dungeon-list>
 
   <app-list [name]="'Haunted Wasteland'" [list]="wastelandChecks" [color]="'orange'"></app-list>
 
   <app-list [name]="'Desert Colossus'" [list]="colossusChecks" [color]="'orange'"></app-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Spirit Temple'" [dungeonChecks]="14" [keyChecks]="6" [skullChecks]="5" [color]="'orange'"></app-dungeon-list>
+  <app-dungeon-list [name]="dungeonSource + 'Spirit Temple'" [itemChecks]="15" [keyChecks]="4" [skullChecks]="5" [color]="'orange'"></app-dungeon-list>
 </div>
