--- a/OoTTracker/ClientApp/src/app/tracker/items/items.component.html
+++ b/OoTTracker/ClientApp/src/app/tracker/items/items.component.html
@@ -1,36 +1,36 @@
 ﻿<div class="items">
   <div class="item-column">
     <div class="item-row">
-      <img class="deku-sticks" src="{{dekuSticks}}" alt="icon" (click)="toggleDekuSticks()"/>
-      <img class="deku-nuts" src="{{dekuNuts}}" alt="icon" (click)="toggleDekuNuts()"/>
-      <img class="bombs" src="{{bombs}}" alt="icon" (click)="toggleBombs()"/>
-      <img class="bow" src="{{bow}}" alt="icon" (click)="toggleBow()"/>
-      <img class="fire-arrows" src="{{fireArrows}}" alt="icon" (click)="toggleFireArrows()"/>
-      <img class="dins-fire" src="{{dinsFire}}" alt="icon" (click)="toggleDinsFire()"/>
+      <app-item [source]="dekuSticks" [type]="item"></app-item>
+      <app-item [source]="dekuNuts" [type]="item"></app-item>
+      <app-item [source]="bombs" [type]="item"></app-item>
+      <app-item [source]="bow" [type]="item"></app-item>
+      <app-item [source]="fireArrows" [type]="item"></app-item>
+      <app-item [source]="dinsFire" [type]="item"></app-item>
     </div>
     <div class="item-row">
-      <img class="slingshot" src="{{slingshot}}" alt="icon" (click)="toggleSlingshot()"/>
-      <img class="ocarina" src="{{ocarina}}" alt="icon" (click)="toggleOcarina()"/>
-      <img class="bombchus" src="{{bombchus}}" alt="icon" (click)="toggleBombchus()"/>
-      <img class="hookshot" src="{{hookshot}}" alt="icon" (click)="toggleHookshot()"/>
-      <img class="ice-arrows" src="{{iceArrows}}" alt="icon" (click)="toggleIceArrows()"/>
-      <img class="farores-wind" src="{{faroresWind}}" alt="icon" (click)="toggleFaroresWind()"/>
+      <app-item [source]="slingshot" [type]="item"></app-item>
+      <app-item [source]="ocarina" [type]="item"></app-item>
+      <app-item [source]="bombchus" [type]="item"></app-item>
+      <app-item [source]="hookshot" [type]="item"></app-item>
+      <app-item [source]="iceArrows" [type]="item"></app-item>
+      <app-item [source]="faroresWind" [type]="item"></app-item>
     </div>
     <div class="item-row">
-      <img class="boomerang" src="{{boomerang}}" alt="icon" (click)="toggleBoomerang()"/>
-      <img class="lens-of-truth" src="{{lensOfTruth}}" alt="icon" (click)="toggleLensOfTruth()"/>
-      <img class="magic-beans" src="{{magicBeans}}" alt="icon" (click)="toggleMagicBeans()"/>
-      <img class="megaton-hammer" src="{{megatonHammer}}" alt="icon" (click)="toggleMegatonHammer()"/>
-      <img class="light-arrows" src="{{lightArrows}}" alt="icon" (click)="toggleLightArrows()"/>
-      <img class="nayrus-love" src="{{nayrusLove}}" alt="icon" (click)="toggleNayrusLove()"/>
+      <app-item [source]="boomerang" [type]="item"></app-item>
+      <app-item [source]="lensOfTruth" [type]="item"></app-item>
+      <app-item [source]="magicBeans" [type]="item"></app-item>
+      <app-item [source]="megatonHammer" [type]="item"></app-item>
+      <app-item [source]="lightArrows" [type]="item"></app-item>
+      <app-item [source]="nayrusLove" [type]="item"></app-item>
     </div>
     <div class="item-row">
-      <img class="rutos-letter" src="{{rutosLetter}}" alt="icon" (click)="toggleRutosLetter()"/>
-      <img class="bottle" src="{{bottle1}}" alt="icon" (click)="toggleBottle(1)"/>
-      <img class="bottle" src="{{bottle2}}" alt="icon" (click)="toggleBottle(2)"/>
-      <img class="bottle" src="{{bottle3}}" alt="icon" (click)="toggleBottle(3)"/>
-      <img class="mask" src="{{mask}}" alt="icon" (click)="toggleMask()"/>
-      <img class="trading-quest" src="{{tradingQuest}}" alt="icon" (click)="toggleTradingQuest()"/>
+      <app-item [source]="rutosLetter" [type]="item"></app-item>
+      <app-item [source]="bottle" [type]="item"></app-item>
+      <app-item [source]="bottle" [type]="item"></app-item>
+      <app-item [source]="bottle" [type]="item"></app-item>
+      <app-item [source]="mask" [type]="item"></app-item>
+      <app-item [source]="tradingQuest" [type]="item"></app-item>
     </div>
   </div>
 </div>
