--- a/OoTTracker/ClientApp/src/app/tracker/other/other.component.scss
+++ b/OoTTracker/ClientApp/src/app/tracker/other/other.component.scss
@@ -1,14 +1,8 @@
-.songs {
+.other {
   display: flex;
   flex-direction: row;
   height: 100%;
   padding: .75rem 0 0 .6rem;
-
-  img {
-    width: 2.2rem;
-    padding-bottom: 1.1rem;
-    margin-right: .5rem;
-  }
 }
 
 .column {
