--- a/OoTTracker/ClientApp/src/app/checklist/dungeon-list/trials-list/trials-list.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/dungeon-list/trials-list/trials-list.component.html
@@ -1,6 +1,7 @@
 <div class="list" [hidden]="outOfEraFilter()">
   <h2 class="header {{color}}" [class.rounded]="list.length == 0" [innerHTML]="dungeonSource + 'Ganon\'s Castle'"></h2>
-  <app-check-counter [num]="8" [type]="chest" [name]="'Light Trial'"></app-check-counter>
+  <app-check-counter [num]="1" [type]="key" [name]="'Light Trial - Small Key'"></app-check-counter>
+  <app-check-counter [num]="7" [type]="chest" [name]="'Light Trial'"></app-check-counter>
   <app-check-counter [num]="2" [type]="chest" [name]="'Spirit Trial'"></app-check-counter>
   <app-check-counter [num]="2" [type]="chest" [name]="'Shadow Trial'"></app-check-counter>
   <app-check-counter [num]="2" [type]="chest" [name]="'Water Trial'"></app-check-counter>
