--- a/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/mountain-checklist/mountain-checklist.component.html
@@ -3,11 +3,11 @@
 
   <app-list [name]="'Trail'" [list]="trailChecks" [color]="'red'"></app-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Dodongo\'s Cavern'" [list]="dodongoChecks" [dungeonChecks]="7" [skullChecks]="5" [color]="'red'"></app-dungeon-list>
+  <app-dungeon-list [name]="dungeonSource + 'Dodongo\'s Cavern'" [list]="dodongoChecks" [itemChecks]="7" [bossKey]="false" [skullChecks]="5" [color]="'red'"></app-dungeon-list>
 
   <app-list [name]="'Goron City'" [list]="goronCityChecks" [color]="'red'"></app-list>
 
   <app-list [name]="'Crater'" [list]="craterChecks" [color]="'red'"></app-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Fire Temple'" [dungeonChecks]="6" [keyChecks]="9" [skullChecks]="5" [color]="'red'" [era]="adult"></app-dungeon-list>
+  <app-dungeon-list [name]="dungeonSource + 'Fire Temple'" [itemChecks]="6" [keyChecks]="8" [skullChecks]="5" [color]="'red'" [era]="adult"></app-dungeon-list>
 </div>
