--- a/OoTTracker/ClientApp/src/app/checklist/river-checklist/river-checklist.component.html
+++ b/OoTTracker/ClientApp/src/app/checklist/river-checklist/river-checklist.component.html
@@ -1,13 +1,25 @@
 <div class="forest-checklist checklist">
   <h1 class="rounded">Zora's River</h1>
 
-  <app-list [name]="'Zora\'s River'" [list]="riverChecks" [color]="'blue'"></app-list>
+  <div class="check-items">
+    <div class="col">
+      <app-list [name]="'Zora\'s River'" [list]="riverChecks" [color]="'blue'"></app-list>
 
-  <app-list [name]="'Zora\'s Domain'" [list]="domainChecks" [color]="'blue'"></app-list>
+      <app-list [name]="'Zora\'s Domain'" [list]="domainChecks" [color]="'blue'"></app-list>
 
-  <app-list [name]="'Zora\'s Fountain'" [list]="fountainChecks" [color]="'blue'"></app-list>
+      <app-list [name]="'Zora\'s Fountain'" [list]="fountainChecks" [color]="'blue'"></app-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Jabu Jabu'" [dungeonChecks]="4" [skullChecks]="4" [color]="'blue'" [era]="child"></app-dungeon-list>
+      <app-dungeon-list [name]="dungeonSource + 'Jabu Jabu'" [itemChecks]="4" [bossKey]="false" [skullChecks]="4" [color]="'blue'" [era]="child"></app-dungeon-list>
 
-  <app-dungeon-list [name]="dungeonSource + 'Ice Cavern'" [list]="iceCavernChecks" [dungeonChecks]="4" [skullChecks]="3" [color]="'blue'" [era]="adult"></app-dungeon-list>
+      <app-dungeon-list [name]="dungeonSource + 'Ice Cavern'" [list]="iceCavernChecks" [itemChecks]="4" [bossKey]="false" [skullChecks]="3" [color]="'blue'"
+                        [era]="adult"></app-dungeon-list>
+    </div>
+
+    <div class="col">
+      <app-list [name]="'Lake Hylia'" [list]="lakeChecks" [color]="'blue'"></app-list>
+
+      <app-dungeon-list [name]="dungeonSource + 'Water Temple'" [itemChecks]="4" [keyChecks]="6" [skullChecks]="5" [color]="'blue'"
+                        [era]="adult"></app-dungeon-list>
+    </div>
+  </div>
 </div>
